# loan-orchestrator

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  config.yaml.example  docker-entrypoint.sh  entrypoint.sh  generate_config.py  pyproject.toml  run.py  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 8630432205e8_initial_revision.py  91b3c3be3b43_remove_redundant_pipeline_version_id_.py  b10af5929dbe_add_react_flow_nodes_dict_as_a_new_.py
backend/orchestrator/app/: __main__.py  app.py  config.py  wsgi.py
backend/orchestrator/app/routes/: __init__.py  application.py  evaluation.py  health.py  pipeline.py
backend/orchestrator/clients/db/: schema.py  session_manager.py
backend/orchestrator/clients/db/wrappers/: application.py  base.py  evaluation.py  pipeline.py
backend/orchestrator/clients/openai/: client.py
backend/orchestrator/resources/: application.py  evaluation.py  types.py
backend/orchestrator/resources/pipeline/: amount_policy.py  dti_rule.py  loan_cap.py  pipeline.py  risk_scoring.py  sentiment_analysis.py  step.py
backend/orchestrator/utils/: async_evaluator.py  config.py  logging.py  parsing.py  wrappers.py
backend/src/app/: __main__.py  app.py  config.py  wsgi.py
backend/src/backend_app/: app.py
backend/src/clients/db/: schema.py  session_manager.py
backend/src/clients/db/wrappers/: application.py  base.py
backend/src/resources/: application.py  evaluation.py  types.py
backend/src/resources/pipeline/: amount_policy.py  dti_rule.py  loan_cap.py  pipeline.py  risk_scoring.py
backend/src/utils/: formatting.py  logging.py
frontend/: .env  .env.example  .prettierignore  Dockerfile  README.md  eslint.config.mjs  index.html  nginx.conf  package-lock.json  (+1 more)
(+36 files in other folders)
