[tool.poetry]
name = "backend-app"
version = "0.1.0"
description = "Loan Orchestrator Backend Application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "3.0.0"
gunicorn = "21.2.0"
SQLAlchemy = "2.0.23"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

