[tool.poetry]
name = "backend-app"
version = "0.1.0"
description = "Loan Orchestrator Backend Application"
authors = ["Tudor Avram <a96tudor@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{include = "backend_app", from = "src"}, ]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = "^3.1.1"
gunicorn = "^23.0.0"
pyutils = {git = "https://github.com/a96tudor/pyutils.git", rev = "main"}
pycountry = "^24.6.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

